--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pendulum>=3.1.0",
     "pydantic>=2.11.7",
     "pydantic-settings>=2.10.1",
+    "python-liquid>=2.0.2",
 ]
 
 [build-system]
